--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,12 @@
 .App {
+  text-align: center;
     margin: 1rem;
     font-family: Arial, Helvetica, sans-serif;
+    /*background-color:bisque;*/
+    background-color:grey;
   }
+
+.App-title {
+  color: white;
+  top: 100px;
+}
